<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/welcome"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/welcome"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <Button
	        android:id="@+id/single"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/single" />
	
	    <Button
	        android:id="@+id/multi"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/multi" />
	
	    <Button
	        android:id="@+id/quit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/exit" />
	
	    <TextView
	        android:id="@+id/add_first_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/first_player"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/edit_text_first_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" >
	    </EditText>
	
	    <TextView
	        android:id="@+id/add_second_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/second_player"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/edit_text_second_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" />
	
	    <TextView
	        android:id="@+id/who_starts"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/who_starts"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="wrap_content"
	        android:layout_height="90dp" >
	
	        <RadioButton
	            android:id="@+id/radio_first"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/first_player_starts" />
	
	        <RadioButton
	            android:id="@+id/radio_second"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/second_player_starts" />
	    </RadioGroup>
	
	    <Button
	        android:id="@+id/start"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start" />
	
	</LinearLayout>
</ScrollView>